# Q2_25_Builder_nissan

./: .gitignore  README.md  anchor-typescript  node-test-runner
.cursor/rules/: anchor-init-setup.mdc  anchor.mdc  codama-idl.mdc  nextjs.mdc  node-test-runner.mdc  solana-kit.mdc
q1-2025/airdrop/: .gitignore  Cargo.toml  airdrop.ts  enroll.ts  keygen.ts  notes.md  package.json  transfer.ts
q1-2025/airdrop-rust/: Cargo.toml  notes.md
q1-2025/solana-starter/: wba-wallet
q2-2025/: .gitignore
q2-2025/airdrop-rust/: Cargo.toml
q2-2025/amm (incomplete)/: Anchor.toml  NOTES.md
q2-2025/escrow-anchor/: Anchor.toml  Notes.MD
q2-2025/escrow-anchor/programs/escrow-anchor-2/: Cargo.toml
q2-2025/escrow-anchor/programs/escrow-anchor-2/src/instructions/: make.rs
q2-2025/solana-starter/: .gitignore
q2-2025/ticketfair-capstone/: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  README-TURBIN3.md  README.md  SUBMISSION-CHECKLIST.md  TURBIN3-SUBMISSION.md  create-event-devnet.ts  debug-bid-issue.ts  deploy-to-local.sh  devnet-full-test.ts  devnet-health-check.sh  devnet-test.ts  package-lock.json  (+14 more)
q2-2025/ticketfair-capstone/programs/escrow/: Cargo.toml
q2-2025/ticketfair-capstone/programs/escrow/src/: constants.rs  error.rs  lib.rs
q2-2025/ticketfair-capstone/programs/escrow/src/handlers/: mod.rs  shared.rs  ticketfair_bid.rs  ticketfair_event.rs  ticketfair_ticket.rs  ticketfair_user.rs
q2-2025/ticketfair-capstone/programs/escrow/src/state/: bid.rs  event.rs  mod.rs  ticket.rs  user.rs
q2-2025/ticketfair-capstone/programs/escrow/tests/: ticketfair_auction.rs
(+165 files in other folders)
